--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,8 @@
   <title>서블릿 프로그래밍</title>
 </head>
 <body>
+
+  <a href="member/userForm.html">회원가입</a>
   <h1>서블릿을 이용한 웹 애플리케이션 구현</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
     Temporibus, libero maiores accusantium explicabo veritatis recusandae dicta eos sapiente corporis excepturi, 
